add route activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TypeActivity"></activity>
+        <activity
+            android:name=".CreateNewRouteActivity"
+            android:parentActivityName=".MapActivity"
+            android:label=""
+            />
+
+        <activity android:name=".TypeActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,7 +41,7 @@
 
         <activity
             android:name=".MapActivity"
-            android:label="@string/title_activity_map" />
+            android:theme="@style/NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
