--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".CreateNewRouteActivity"
             android:parentActivityName=".MapActivity"
-            android:label=""
+            android:label="Add new route"
             />
 
         <activity android:name=".TypeActivity" />
