--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.tubb.smrv:swipemenu-recyclerview:5.4.8'
 }
