add profile edit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".ProfileEditActivity"
+            android:label="Profile edit"
+            android:parentActivityName=".MapActivity"
+            ></activity>
         <activity
             android:name=".CreateNewCarActivity"
             android:label="Add new car"
