--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MessageListActivity"
+        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".ConfirmRegistrationActivity" />
+        <activity
+            android:name=".MessageListActivity"
             android:label="Messages"
-            android:parentActivityName=".MapActivity"
-            ></activity>
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".RequestListActivity"
             android:label="Request list"
