--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'commons-io:commons-io:2.6'
     implementation 'com.hbb20:ccp:2.3.7'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.drawerlayout:drawerlayout:1.0.0"
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
